[workspace]
resolver = "2"

members = [
    "packages/core/nros",
    "packages/core/nros-core",
    "packages/core/nros-serdes",
    "packages/core/nros-macros",
    "packages/core/nros-params",
    "packages/core/nros-rmw",
    "packages/core/nros-node",
    "packages/core/nros-log",
    "packages/core/nros-orchestration",
    # Build-script helper: extracts Rust type sizes from a compiled rlib so
    # nros-c/nros-cpp can size their opaque storage from Rust's size_of.
    "packages/core/nros-sizes-build",
    # Phase 149.5 — shared build-script helpers (manifest parser +
    # link-feature policy) consumed by zpico-sys + the per-kernel
    # generic board crates as `[build-dependencies]`.
    "packages/boards/nros-board-common",
    # Phase 173.4 — canonical board-entry C ABI (`<nros/board.h>` mirror
    # + `nros_board_export!` macro). Sibling to `nros-platform-cffi`.
    "packages/boards/nros-board-cffi",
    # Zenoh-pico FFI bindings
    "packages/zpico/zpico-sys",
    # Free-list allocator for z_malloc/z_free on bare-metal
    "packages/zpico/zpico-alloc",
    # XRCE-DDS FFI bindings
    "packages/xrce/xrce-sys",
    # Zenoh RMW backend (shim + zpico wrapper)
    "packages/zpico/nros-rmw-zenoh",
    # Phase 123.A.1.x.4.a — standalone staticlib wrapper. Emits
    # `libnros_rmw_zenoh_staticlib.a` separately from `libnros_c.a`
    # so the SDK matrix can ship them decoupled.
    "packages/zpico/nros-rmw-zenoh-staticlib",
    # Phase 169.5 — Rust shim exposing the Cyclone DDS C++ backend's
    # C-linkage register entry (`nros_rmw_cyclonedds_register`).
    # The underlying library is built by the standalone
    # `packages/dds/nros-rmw-cyclonedds/` CMake project or by the
    # Zephyr module's `CONFIG_NROS_RMW_CYCLONEDDS` branch.
    "packages/dds/nros-rmw-cyclonedds-sys",
    # Phase 169.4 — dust-dds retired. nros-rmw-dds +
    # nros-rmw-dds-staticlib crates deleted.
    # Integration tests
    "packages/testing/nros-tests",
    # C API for embedded systems
    "packages/core/nros-c",
    # C++ API (header-only C++14 library + Rust FFI staticlib)
    "packages/core/nros-cpp",
    # LAN9118 Ethernet driver for smoltcp
    "packages/drivers/lan9118-smoltcp",
    # NVIDIA Tegra IVC driver (Orin SPE — Phase 100). Default build is
    # an empty stub; `unix-mock` for host CI, `fsp` to link against
    # NVIDIA's `tegra_aon_fsp.a` (requires `NV_SPE_FSP_DIR`).
    "packages/drivers/nvidia-ivc",
    # Generated ROS 2 interface types (rcl_interfaces, builtin_interfaces).
    # Required by nros-node's param-services feature. Checked into git because
    # cargo requires workspace member paths to exist on disk.
    "packages/interfaces/rcl-interfaces/generated/humble/nros-builtin-interfaces",
    "packages/interfaces/rcl-interfaces/generated/humble/nros-rcl-interfaces",
    "packages/interfaces/lifecycle-msgs/generated/humble/nros-lifecycle-msgs",
    # C function table adapter for third-party RMW backends
    "packages/core/nros-rmw-cffi",
    # Phase 115.L.2 — zenoh-pico via C vtable
    # Ghost model types for verification (shared between production tests and Verus proofs)
    "packages/verification/nros-ghost-types",
    # Unified platform abstraction
    "packages/core/nros-platform",
    "packages/core/nros-platform-api",
    "packages/core/nros-platform-cffi",
    "packages/core/nros-platform-critical-section",
    # Phase 121.3.deprecate-rust-remove + 123.A.1.x.2 — the Rust kernel
    # platform crates (nros-platform-{freertos,nuttx,threadx,zephyr,
    # posix}) were deleted. The directories
    # `packages/core/nros-platform-{freertos,nuttx,threadx,zephyr,
    # posix}/` now hold the C ports only (renamed from `*-c`). The
    # canonical `nros_platform_*` symbols come from the C port compiled
    # by the board crate's build.rs (FreeRTOS / ThreadX) or by the
    # parent build system (NuttX `make`, Zephyr `west`, POSIX via the
    # consumer's CMake site / build.rs).
    # Phase 121.10 — nros-platform-orin-spe was deleted. orin-spe is
    # now a board over FreeRTOS-FSP (see `packages/boards/nros-board-orin-spe`);
    # IVC + FSP init live at the board level.
    # Platform shims for RMW backends
    # Phase 129.D — `zpico-platform-shim` deleted. IVC link-layer
    # forwarders carved out into `zpico-link-ivc`; every other
    # `z_*` / `_z_*` symbol now comes from `zpico-sys`'s default-on
    # `platform-aliases` C TU.
    "packages/zpico/zpico-link-ivc",
    "packages/zpico/zpico-platform-custom",
    # Phase 129.D.2 — `xrce-platform-shim` deleted. `uxr_millis` /
    # `uxr_nanos` symbols now come from
    # `nros-rmw-xrce/src/platform_aliases.c` compiled into
    # `nros-rmw-xrce-cffi`.
    # Phase 115.K.2.5.1.0 — Rust shim that links the C XRCE backend
    # (nros-rmw-xrce) and exposes its register entry point.
    "packages/xrce/nros-rmw-xrce-cffi",
    # Phase 160.L — standalone staticlib wrapper. Mirrors
    # nros-rmw-zenoh-staticlib so cmake /
    # Corrosion can import a `staticlib` target without forcing the
    # cffi crate itself to emit one (which broke Zephyr no_std
    # compiles per Phase 154's notes).
    "packages/xrce/nros-rmw-xrce-cffi-staticlib",
    # Phase 128.F — cross-RMW bridge primitives.
    "packages/bridge/nros-bridge",
]

# Excluded from workspace — standalone packages and third-party forks
exclude = [
    # rcl-interfaces parent package (metadata only, no Rust targets)
    "packages/interfaces/rcl-interfaces",
    # lifecycle-msgs parent package (metadata only, no Rust targets)
    "packages/interfaces/lifecycle-msgs",
    # Examples are standalone packages that generate their own bindings
    # Native Rust examples (desktop/Linux)
    # Phase 118 — collapsed per-RMW cells (build-time RMW feature selection)
    "examples/native/rust/talker",
    "examples/native/rust/listener",
    "examples/native/rust/service-server",
    "examples/native/rust/service-client",
    "examples/native/rust/action-server",
    "examples/native/rust/action-client",
    "examples/qemu-arm-freertos/rust/talker",
    "examples/qemu-arm-freertos/rust/listener",
    "examples/qemu-arm-freertos/rust/service-server",
    "examples/qemu-arm-freertos/rust/service-client",
    "examples/qemu-arm-freertos/rust/action-server",
    "examples/qemu-arm-freertos/rust/action-client",
    "examples/qemu-riscv64-threadx/rust/talker",
    "examples/qemu-riscv64-threadx/rust/listener",
    "examples/qemu-riscv64-threadx/rust/service-server",
    "examples/qemu-riscv64-threadx/rust/service-client",
    "examples/qemu-riscv64-threadx/rust/action-server",
    "examples/qemu-riscv64-threadx/rust/action-client",
    "examples/threadx-linux/rust/talker",
    "examples/threadx-linux/rust/listener",
    "examples/threadx-linux/rust/service-server",
    "examples/threadx-linux/rust/service-client",
    "examples/threadx-linux/rust/action-server",
    "examples/threadx-linux/rust/action-client",
    "examples/native/rust/zenoh/talker",
    "examples/native/rust/zenoh/listener",
    "examples/native/rust/zenoh/logging",
    "examples/native/rust/zenoh/custom-transport-talker",
    "examples/native/rust/zenoh/custom-transport-listener",
    "examples/native/rust/zenoh/lifecycle-node",
    "examples/native/rust/zenoh/custom-msg",
    "examples/native/rust/zenoh/service-server",
    "examples/native/rust/zenoh/service-client",
    "examples/native/rust/zenoh/service-client-async",
    "examples/native/rust/zenoh/action-server",
    "examples/native/rust/zenoh/action-client",
    "examples/native/rust/zenoh/action-client-async",
    "packages/testing/nros-bench/executor-fairness",
    "packages/testing/nros-bench/stress-zenoh",
    "examples/native/rust/zenoh/talker-rtic",
    "examples/native/rust/zenoh/listener-rtic",
    "examples/native/rust/zenoh/service-server-rtic",
    "examples/native/rust/zenoh/service-client-rtic",
    "examples/native/rust/zenoh/action-server-rtic",
    "examples/native/rust/zenoh/action-client-rtic",
    # Phase 169.2 — examples/bridges/native-rust-zenoh-to-dds
    # + examples/native/rust/dds/* deleted along with the
    # `nros-rmw-dds` (dust-dds) backend retirement. Rust DDS
    # examples will be re-created once a Rust→Cyclone shim
    # lands (Phase 169.5 / 169.9).
    # QEMU ARM examples (bare-metal Cortex-M3)
    "examples/qemu-arm-baremetal/rust/zenoh/talker",
    "examples/qemu-arm-baremetal/rust/zenoh/listener",
    "packages/testing/nros-tests/bins/cdr-roundtrip-qemu",
    "packages/testing/nros-bench/wcet-cycles-qemu",
    "packages/testing/nros-bench/large-msg-baremetal",
    "packages/testing/nros-tests/bins/lan9118-qemu",
    "examples/qemu-arm-baremetal/rust/zenoh/talker-rtic",
    "examples/qemu-arm-baremetal/rust/zenoh/listener-rtic",
    "examples/qemu-arm-baremetal/rust/zenoh/service-server-rtic",
    "examples/qemu-arm-baremetal/rust/zenoh/service-client-rtic",
    "examples/qemu-arm-baremetal/rust/zenoh/action-server-rtic",
    "examples/qemu-arm-baremetal/rust/zenoh/action-client-rtic",
    "examples/qemu-arm-baremetal/rust/zenoh/talker-rtic-mixed",
    "examples/qemu-arm-baremetal/rust/zenoh/listener-rtic-mixed",
    "examples/qemu-arm-baremetal/rust/zenoh/serial-talker",
    "examples/qemu-arm-baremetal/rust/zenoh/serial-listener",
    # Phase 169.2 — Rust DDS examples deleted (no Rust→Cyclone
    # path yet; see Phase 169 doc work item .9).
    # QEMU ARM FreeRTOS examples (Cortex-M3 + FreeRTOS + lwIP)
    "examples/qemu-arm-freertos/rust/zenoh/talker",
    "examples/qemu-arm-freertos/rust/zenoh/listener",
    "examples/qemu-arm-freertos/rust/zenoh/service-server",
    "examples/qemu-arm-freertos/rust/zenoh/service-client",
    "examples/qemu-arm-freertos/rust/zenoh/action-server",
    "examples/qemu-arm-freertos/rust/zenoh/action-client",
    # Phase 169.2 — qemu-arm-freertos rust/dds deleted.
    # QEMU ARM NuttX examples (Cortex-M3 + NuttX)
    "examples/qemu-arm-nuttx/rust/zenoh/talker",
    "examples/qemu-arm-nuttx/rust/zenoh/listener",
    "examples/qemu-arm-nuttx/rust/zenoh/service-server",
    "examples/qemu-arm-nuttx/rust/zenoh/service-client",
    "examples/qemu-arm-nuttx/rust/zenoh/action-server",
    "examples/qemu-arm-nuttx/rust/zenoh/action-client",
    # Phase 169.2 — qemu-arm-nuttx rust/dds deleted.
    # STM32F4 examples
    "examples/stm32f4/rust/zenoh/talker",
    "examples/stm32f4/rust/zenoh/polling",
    "examples/stm32f4/rust/zenoh/talker-rtic",
    "examples/stm32f4/rust/zenoh/listener-rtic",
    "examples/stm32f4/rust/zenoh/service-server-rtic",
    "examples/stm32f4/rust/zenoh/service-client-rtic",
    "examples/stm32f4/rust/zenoh/action-server-rtic",
    "examples/stm32f4/rust/zenoh/action-client-rtic",
    "examples/stm32f4/rust/zenoh/talker-embassy",
    "packages/testing/nros-smoke/stm32f4-smoltcp-echo",
    # Zephyr examples
    # Phase 168.1 collapsed-shape Rust examples (one dir, N RMW
    # backends via Kconfig overlay + Cargo features).
    "examples/zephyr/rust/talker",
    "examples/zephyr/rust/listener",
    "examples/zephyr/rust/service-server",
    "examples/zephyr/rust/service-client",
    "examples/zephyr/rust/action-server",
    "examples/zephyr/rust/action-client",
    "examples/zephyr/rust/service-client-async",
    # Zephyr XRCE examples (require Zephyr workspace + XRCE Agent)
    # Phase 169.2 — Zephyr rust/dds examples deleted.
    # No Cargo.toml in cpp/c examples (Zephyr cmake builds them)
    # Reference implementations (library, not an example)
    "packages/reference/qemu-smoltcp-bridge",
    # smoltcp network provider (embedded-only, requires cross-compilation)
    "packages/drivers/nros-smoltcp",
    # Shared bare-metal helpers (PRNG, sleep, libc stubs) — embedded-only
    "packages/drivers/nros-baremetal-common",
    # lwIP BSD socket bindings for FreeRTOS (requires FREERTOS_DIR + LWIP_DIR)
    "packages/drivers/freertos-lwip-sys",
    # NetX Duo BSD socket bindings for ThreadX (requires THREADX_DIR + NETX_DIR)
    "packages/drivers/threadx-netx-sys",
    # NuttX POSIX socket bindings (requires NUTTX_DIR)
    "packages/drivers/nuttx-sys",
    # Zephyr POSIX socket bindings (requires ZEPHYR_BUILD_DIR)
    "packages/drivers/zephyr-posix-sys",
    # Serial (UART) link layer (embedded-only, requires cross-compilation)
    "packages/zpico/zpico-serial",
    # CMSDK UART driver (embedded-only, Cortex-M)
    "packages/drivers/cmsdk-uart",
    # STM32F4 USART driver (embedded-only, Cortex-M)
    "packages/drivers/stm32f4-usart",
    # Native XRCE-DDS examples (requires XRCE Agent)
    "examples/native/rust/xrce/talker",
    "examples/native/rust/xrce/listener",
    "examples/native/rust/xrce/service-server",
    "examples/native/rust/xrce/service-client",
    "examples/native/rust/xrce/action-server",
    "examples/native/rust/xrce/action-client",
    "examples/native/rust/xrce/serial-talker",
    "examples/native/rust/xrce/serial-listener",
    "packages/testing/nros-bench/large-msg-xrce",
    "packages/testing/nros-bench/stress-xrce",
    # Board crates (embedded-only, require cross-compilation)
    "packages/boards/mps2-an385-pac",
    "packages/boards/nros-board-mps2-an385",
    "packages/platforms/nros-platform-mps2-an385",
    "packages/platforms/nros-platform-stm32f4",
    "packages/platforms/nros-platform-esp32",
    "packages/platforms/nros-platform-esp32-qemu",
    "packages/platforms/nros-platform-esp32s3",
    "packages/boards/nros-board-esp32",
    "packages/boards/nros-board-esp32-qemu",
    "packages/boards/nros-board-esp32s3",
    "packages/boards/nros-board-stm32f4",
    "packages/boards/nros-board-nuttx-qemu-arm",
    "packages/boards/nros-board-mps2-an385-freertos",
    # Phase 149.1.A scaffolding — generic FreeRTOS+lwIP façade.
    # 149.1.B carves the kernel + lwIP build glue here.
    "packages/boards/nros-board-freertos",
    # Phase 149.2.A scaffolding — generic ThreadX+NetX-Duo façade.
    # 149.2.B carves the kernel + NetX-Duo build glue here.
    "packages/boards/nros-board-threadx",
    # Phase 149.4.A scaffolding — thin NuttX façade (NuttX owns
    # the kernel build via its own apps/external + Make.defs).
    "packages/boards/nros-board-nuttx",
    # Phase 100.6 — AGX Orin SPE board crate. Excluded because it
    # links against NVIDIA's `tegra_aon_fsp.a`, which only exists on
    # an SDK-Manager-installed Orin SPE FSP tree at `$NV_SPE_FSP_DIR`.
    # Build via `cd packages/boards/nros-board-orin-spe && cargo build`
    # or `just orin_spe build` (Phase 100.7).
    "packages/boards/nros-board-orin-spe",
    "packages/boards/nros-board-threadx-linux",
    "packages/boards/nros-board-threadx-qemu-riscv64",
    # Phase 117.10 — ARM FVP Base_RevC AEMv8-R Cortex-A SMP under Zephyr.
    # Build via `west build -b fvp_baser_aemv8r/fvp_aemv8r_aarch64/smp` from
    # an example app; cargo `check` works on host for the Rust surface.
    "packages/boards/nros-board-fvp-aemv8r-smp",
    # Phase 117.11 — NXP X-S32Z270-DC (DC2) Cortex-R52 RTU0 under Zephyr.
    # Build via `west build -b s32z2xxdc2/s32z270/rtu0/D`; cargo check
    # works on host for the Rust surface.
    "packages/boards/nros-board-s32z270dc2-r52",
    # ThreadX Linux examples (require ThreadX + NetX Duo SDKs)
    "examples/threadx-linux/rust/zenoh/talker",
    "examples/threadx-linux/rust/zenoh/listener",
    "examples/threadx-linux/rust/zenoh/service-server",
    "examples/threadx-linux/rust/zenoh/service-client",
    "examples/threadx-linux/rust/zenoh/action-server",
    "examples/threadx-linux/rust/zenoh/action-client",
    # Phase 169.2 — threadx-linux rust/dds deleted.
    # ThreadX QEMU RISC-V examples (require ThreadX + NetX Duo SDKs + RISC-V toolchain)
    "examples/qemu-riscv64-threadx/rust/zenoh/talker",
    "examples/qemu-riscv64-threadx/rust/zenoh/listener",
    "examples/qemu-riscv64-threadx/rust/zenoh/service-server",
    "examples/qemu-riscv64-threadx/rust/zenoh/service-client",
    "examples/qemu-riscv64-threadx/rust/zenoh/action-server",
    "examples/qemu-riscv64-threadx/rust/zenoh/action-client",
    # Phase 169.2 — qemu-riscv64-threadx rust/dds deleted.
    # ESP32 crates (RISC-V, require nightly + esp-hal)
    "packages/drivers/openeth-smoltcp",
    # ESP32 examples (RISC-V, require nightly + esp-hal)
    "packages/testing/nros-smoke/esp32-hello-world",
    "examples/esp32/rust/zenoh/talker",
    "examples/esp32/rust/zenoh/listener",
    "examples/qemu-esp32-baremetal/rust/zenoh/talker",
    "examples/qemu-esp32-baremetal/rust/zenoh/listener",
    # Phase 169.2 — qemu-esp32-baremetal rust/dds deleted.
    # Verus verification crate (requires Verus toolchain, excluded from workspace)
    "packages/verification/nros-verification",
    # PX4 vendored sources (submodule under third-party/px4/). Has its
    # own workspace / build system; excluded so cargo doesn't try to
    # absorb its crates into nano-ros's workspace.
    "third-party/px4/px4-rs",
    "third-party/px4/PX4-Autopilot",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lin Hsiang-Jui <jerry73204@gmail.com>", "NEWSLabNTU"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NEWSLabNTU/nano-ros"
homepage = "https://github.com/NEWSLabNTU/nano-ros"
documentation = "https://docs.rs/nros"
readme = "README.md"
rust-version = "1.75"
categories = ["embedded", "no-std", "network-programming"]
keywords = ["ros2", "robotics", "embedded", "no-std", "rtos"]

[workspace.dependencies]
# Internal crates — version required for crates.io; path used locally.
nros-core = { version = "0.1.0", path = "packages/core/nros-core", default-features = false }
nros-serdes = { version = "0.1.0", path = "packages/core/nros-serdes", default-features = false }
nros-macros = { version = "0.1.0", path = "packages/core/nros-macros" }
nros-params = { version = "0.1.0", path = "packages/core/nros-params", default-features = false }
nros-rmw = { version = "0.1.0", path = "packages/core/nros-rmw", default-features = false }
nros-rmw-zenoh = { version = "0.1.0", path = "packages/zpico/nros-rmw-zenoh", default-features = false }
# Phase 115.K.2.5.1.0 — Rust shim that links the C XRCE backend.
# Used by nros / nros-node when `rmw-xrce-cffi` feature is on, and
# by example crates that opt into the cffi-via-C-backend path.
nros-rmw-xrce-cffi = { version = "0.1.0", path = "packages/xrce/nros-rmw-xrce-cffi", default-features = false }
nros-rmw-cffi = { version = "0.1.0", path = "packages/core/nros-rmw-cffi", default-features = false }
nros-node = { version = "0.1.0", path = "packages/core/nros-node", default-features = false }
nros-log = { version = "0.1.0", path = "packages/core/nros-log" }
nros-orchestration = { version = "0.1.0", path = "packages/core/nros-orchestration", default-features = false }
nros-sizes-build = { version = "0.1.0", path = "packages/core/nros-sizes-build" }
nros-platform = { version = "0.1.0", path = "packages/core/nros-platform", default-features = false }
nros-platform-cffi = { version = "0.1.0", path = "packages/core/nros-platform-cffi", default-features = false }
# Phase 121.3.deprecate-rust-remove + 123.A.1.x.2 — the Rust kernel
# platform crates (nros-platform-{freertos,nuttx,threadx,zephyr,posix})
# were deleted. The `packages/core/nros-platform-{rtos,posix}/`
# directories now hold the C ports only — no Cargo crate. Consumers
# link the C port via the board crate's build.rs (FreeRTOS, ThreadX)
# or via the parent build
# system (Zephyr west, NuttX make).
zpico-link-ivc = { version = "0.1.0", path = "packages/zpico/zpico-link-ivc", default-features = false }
zpico-platform-custom = { version = "0.1.0", path = "packages/zpico/zpico-platform-custom", default-features = false }
zpico-sys = { version = "0.1.0", path = "packages/zpico/zpico-sys", default-features = false }
zpico-alloc = { version = "0.1.0", path = "packages/zpico/zpico-alloc" }
xrce-sys = { version = "0.1.0", path = "packages/xrce/xrce-sys", default-features = false }

# no_std compatible
heapless = "0.8"
embedded-io = "0.6"

# Serialization
byteorder = { version = "1.5", default-features = false }

# Proc macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Optional std dependencies
thiserror = "1"

# Embedded runtime (QEMU testing)
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
panic-halt = "1.0"
qemu-exit = "3.0"

# Logging
log = { version = "0.4", default-features = false }
env_logger = "0.11"

# Embedded logging
defmt = "0.3"
defmt-rtt = "0.4"

# FFI / C interop
cty = "0.2"

# ---------------------------------------------------------------------------
# Workspace-wide lint configuration. Member crates opt in with
# `[lints] workspace = true`. Replaces the ad-hoc CLIPPY_LINTS string the
# justfile used to pass on the command line.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
warnings = "deny"
# Whitelist cfg flags consumed by the workspace's verifiers / codegen tools
# (Kani for bounded model checking, cbindgen for C header generation,
# zpico_backend for the zenoh-pico backend selector). Combined here so
# each crate can opt in via `[lints] workspace = true` without needing
# its own per-crate `[lints.rust] unexpected_cfgs` override.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(cbindgen)',
    'cfg(verus_keep_ghost)',
    'cfg(verus_keep_ghost_body)',
    'cfg(zpico_backend, values("posix", "zephyr", "bare-metal", "freertos", "nuttx", "threadx", "orin-spe"))',
] }

[workspace.lints.clippy]
infinite_iter = "deny"
while_immutable_condition = "deny"
never_loop = "deny"
empty_loop = "deny"
unconditional_recursion = "deny"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"

[profile.release]
opt-level = "s"      # Optimize for size
# `lto = true` makes rustc emit each rlib's codegen units as LLVM
# bitcode .rcgu.o members. The `nros-sizes-build` probe parses rlib
# members as ELF objects via the `object` crate, which cannot read
# bitcode, so every `__NROS_SIZE_*` symbol comes back as 0 — see
# Phase 89.3. With `lto = "off"` the rlib contains native objects
# and the probe recovers the correct `size_of::<T>()` values, which
# nros-cpp uses to size `alignas(…) uint8_t storage_[…]` buffers
# for ActionClient / ActionServer / Executor. The binary-size cost
# is small in practice and can be revisited by a future sizes-probe
# that reads bitcode directly.
lto = "off"
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary, no unwinding

[profile.dev]
opt-level = 1        # Some optimization even in dev for embedded

# Patches for generated crates that use version = "*"
[patch.crates-io]
nros-core = { path = "packages/core/nros-core" }
nros-serdes = { path = "packages/core/nros-serdes" }
